--- a/style.css
+++ b/style.css
@@ -1,3 +1,101 @@
 h1, p {
   font-family: Lato;
 }
+.main {
+  background-color: #2A3C4C;
+  padding: 15px;
+}
+.container {
+  width: 100%;
+  padding:0;
+}
+.container ul {
+  margin-top:0;
+}
+.progressbar {
+  width: 100%;
+  counter-reset: step;
+  margin: 0;
+  margin-top: 30px;
+  padding: 0;
+}
+.progressbar li {
+  list-style-type: none;
+  float: left;
+  position: relative;
+  text-align: center;
+  font-family: sans-serif;
+  font-size: 15px;
+  font-weight: normal;
+  height: 37px;
+  width: 43px;
+  @media only screen and (max-width: 1449px) {
+    width: 35px;
+  }
+  @media only screen and (min-width: 991px) and (max-width: 1200px) {
+    width: 27px;
+  }
+  @media only screen and (max-width: 704px) {
+    width: 28px;
+  }
+  /* Steps*/
+}
+.progressbar li:before {
+  content: counter(step);
+  counter-increment: step;
+  width: 25px;
+  height: 25px;
+  line-height: 25px;
+  border: 1px solid #fff; /* BORDER COLOR FOR THE UPCOMING STEPS */
+  display: block;
+  text-align: center;
+  margin-top: 10px;
+  border-radius: 50%;
+  background-color: #2A3C4C; /* BACKGROUND COLOR OF THE STEPS */
+  color: white; /* FONT COLOR OF THE STEPS */
+  /* Circles*/
+}
+.progressbar li:after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 10px;
+  background-color: #2A3C4C; /* STEP CONNECTOS BACKGROUND */
+  /*lines */
+  top: 18px;
+  left: -50%;
+  z-index: -1; 
+  border: 2px solid rgb(248, 248, 248); /* STEP CONNECTOS BORDER TO BE VISIBLE WHEN ADDING THE BACKGROUND */
+  opacity: 0.8;
+}
+.progressbar li:first-child:after {
+  content: none;
+}
+.progressbar li.active {
+  color: #546A79;
+}
+.progressbar li.active:before {
+  width: 25px;
+  height: 25px;
+  line-height: 25px;
+  border-radius: 50%;
+  border-color: white; /* BORDER FOR THE STEPS THAT ARE ALREADY COMPLETED */
+  color: white; /* FONT COLOR FOR THE STEPS THAT ARE ALREADY COMPLETED */
+  background-color: #246C4D; /* BACKGROUND FOR THE STEPS THAT ARE ALREADY COMPLETED */
+  margin-top: 10px;
+}
+.progressbar li.current_active {
+  color: #546A79;
+}
+.progressbar li.current_active:before {
+  width: 25px;
+  height: 25px;
+  line-height: 25px;
+  border-radius: 50%;
+  border-color: #fff; /* CURRENT STEP BORDER COLOR */
+  color: white; /* CURRENT STEP FONT COLOR */
+  margin-top: 10px;
+}
+.progressbar li.active+ li:after {
+  background-color: #246C4D; /* STEP CONNECTOR BACKGROUND COLOR */
+}
